--- a/motivatie.html
+++ b/motivatie.html
@@ -10,7 +10,7 @@
 		
 		<ul>
 			
-			<li><a href="portefolio.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a class="active" href="motivatie.html">Motivatie</a></li>
 			<li><a href="scholen.html">Scholen</a></li>
 			<li><a href="ontwikkelings-punten.html">Ontwikkelings punten</a></li>
